Fixing overflow

--- a/src/components/layout/FbSidebar/index.scss
+++ b/src/components/layout/FbSidebar/index.scss
@@ -34,7 +34,7 @@
       min-height: 100vh;
       top: 0;
       right: 0;
-      overflow: auto;
+      overflow-y: auto;
       z-index: $z-index-overlay + 1;
       position: fixed;
       width: $sidebar-phone-width;
